<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UI_UR"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg1"
    tools:context=".UR">

    <TextView
        android:id="@+id/txUR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="552dp"
        android:background="#64FFDA"
        android:text="@string/txUR"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/URtxName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="476dp"
        android:text="@string/URtxName"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/URtxNameAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/URtxNameAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="477dp"
        android:text="@string/URtxNameAns"
        android:textColor="#00796B"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/URtxName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/URtxName" />

    <TextView
        android:id="@+id/URtxWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="422dp"
        android:text="@string/URtxWeight"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/URtxWeightAns"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URtxName" />

    <TextView
        android:id="@+id/URtxWeightAns"
        android:layout_width="64dp"
        android:layout_height="22dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="425dp"
        android:text="@string/URtxWeightAns"
        android:textColor="#00796B"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/URtxWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/URtxWeight" />

    <TextView
        android:id="@+id/URtxCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="362dp"
        android:text="@string/URtxCategory"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/URtxCategoryAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URtxWeight" />

    <TextView
        android:id="@+id/URtxCategoryAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="364dp"
        android:text="@string/URtxCategoryAns"
        android:textColor="#00796B"
        app:layout_constraintBaseline_toBaselineOf="@+id/URtxCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/URtxCategory" />

    <TextView
        android:id="@+id/URtxPrice"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="297dp"
        android:text="@string/URtxPrice"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/URtxPriceAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URtxCategory" />

    <TextView
        android:id="@+id/URtxPriceAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="300dp"
        android:text="@string/URtxPriceAns"
        android:textColor="#00796B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnURUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/URtxPrice"
        app:layout_constraintTop_toBottomOf="@+id/URtxCategoryAns"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnURUpdate"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="142dp"
        android:background="@drawable/button_round"
        android:text="@string/btnURUpdate"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URtxPrice" />

    <Button
        android:id="@+id/btnURRemove"
        android:layout_width="229dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/button_round"
        android:text="@string/btnURRemove"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnURUpdate" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="67dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="210dp"
        app:srcCompat="@drawable/caki" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="235dp"
        android:text="TextView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/AddtxPriceAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddCategory"/>

</RelativeLayout>