<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UI_Add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg1"
    tools:context=".Add"
    >

    <TextView
        android:id="@+id/txAddItems"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="552dp"
        android:background="#64FFDA"
        android:text="@string/txAddItems"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/AddtxName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="448dp"
        android:text="@string/AddtxName"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/AddtxNameAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AddtxWeight"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="282dp"
        android:layout_marginBottom="377dp"
        android:text="@string/AddtxWeight"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/AddCategory"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddtxName" />

    <TextView
        android:id="@+id/AddCategory"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="314dp"
        android:text="@string/AddCategory"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/AddtxCategoAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddtxWeight" />

    <TextView
        android:id="@+id/AddtxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="247dp"
        android:text="@string/AddtxPrice"
        android:textColor="#00796B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/AddtxPriceAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddCategory" />

    <EditText
        android:id="@+id/AddtxNameAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="431dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/AddtxNameAns"
        android:textColor="#8F8686"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/AddtxName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AddtxName" />

    <EditText
        android:id="@+id/AddtxCategoAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/AddtxCategoAns"
        android:textColor="#655959"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/AddCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AddCategory" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="366dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#100F0F"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/AddtxWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AddtxWeight" />

    <EditText
        android:id="@+id/AddtxPriceAns"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="239dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#090909"
        app:layout_constraintBaseline_toBaselineOf="@+id/AddtxPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AddtxPrice" />

    <Button
        android:id="@+id/btnAddCake1"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/button_round"
        android:text="@string/btnAddCake1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/btnAddClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddtxPrice" />

    <Button
        android:id="@+id/btnAddClear"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/button_round"
        android:text="@string/btnAddClear"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAddCake1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddCake1" />

</RelativeLayout>